vemo-app/main/default/objects/EmploymentHistory__c/EmploymentHistory__c.object-meta.xml
<CustomObject>
    <label>Employment History</label>
    <nameField>
        <displayFormat>EH-{00000000}</displayFormat>
        <label>Employment History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employment History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>