vemo-app/main/default/objects/EmploymentHistory__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <inlineHelpText>Employee, Contractor, or Internship.</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EmploymentCategory</valueSetName>
    </valueSet>
</CustomField>