vemo-app/main/default/objects/EmploymentHistory__c/fields/DateVerified__c.field-meta.xml
<CustomField>
    <fullName>DateVerified__c</fullName>
    <inlineHelpText>The date this employment was verified.</inlineHelpText>
    <label>Date Verified</label>
    <type>Date</type>
</CustomField>