vemo-app/main/default/objects/EmploymentHistory__c/fields/Employer__c.field-meta.xml
<CustomField>
    <fullName>Employer__c</fullName>
    <inlineHelpText>The name of the organization employing the student.</inlineHelpText>
    <label>Employer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>