vemo-app/main/default/objects/EmploymentHistory__c/fields/EmploymentEndDate__c.field-meta.xml
<CustomField>
    <fullName>EmploymentEndDate__c</fullName>
    <inlineHelpText>The date the employment ended.</inlineHelpText>
    <label>Employment End Date</label>
    <type>Date</type>
</CustomField>