vemo-app/main/default/objects/EmploymentHistory__c/fields/EmploymentStartDate__c.field-meta.xml
<CustomField>
    <fullName>EmploymentStartDate__c</fullName>
    <inlineHelpText>The date the employment started.</inlineHelpText>
    <label>Employment Start Date</label>
    <type>Date</type>
</CustomField>