vemo-app/main/default/objects/EmploymentHistory__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <inlineHelpText>The Student related to this Employment History.</inlineHelpText>
    <label>Student</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Employment History</relationshipLabel>
    <relationshipName>Employment_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>