vemo-app/main/default/objects/EmploymentHistory__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>Full Time or Part Time</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EmploymentType</valueSetName>
    </valueSet>
</CustomField>