vemo-app/main/default/objects/EmploymentHistory__c/fields/Verified__c.field-meta.xml
<CustomField>
    <fullName>Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The date the student's employment was verified.</inlineHelpText>
    <label>Verified</label>
    <type>Checkbox</type>
</CustomField>